--- a/pom.xml
+++ b/pom.xml
@@ -3,24 +3,30 @@
     <groupId>com.microsoft.azure</groupId>
     <artifactId>traffic-manager-java-manage-profiles</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ManageTrafficManager</name>
+    <name>ManageTrafficManager.java</name>
     <description></description>
     <url>https://github.com/Azure/traffic-manager-java-manage-profiles</url>
     <dependencies>
         <dependency>
             <groupId>com.microsoft.azure</groupId>
             <artifactId>azure</artifactId>
-            <version>1.0.0-beta4.1</version>
+            <version>1.0.0-beta5</version>
         </dependency>
     </dependencies>
     <build>
+        <sourceDirectory>src</sourceDirectory>
+        <resources>
+            <resource>
+                <directory>resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.4.0</version>
                 <configuration>
-                    <mainClass>com.microsoft.azure.management.trafficmanager.samples.ManageTrafficManager</mainClass>
+                    <mainClass>com.microsoft.azure.management.trafficmanager.samples.ManageTrafficManager.java</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -48,7 +54,7 @@
                             </descriptorRefs>
                             <archive>
                                 <manifest>
-                                    <mainClass>com.microsoft.azure.management.trafficmanager.samples.ManageTrafficManager</mainClass>
+                                    <mainClass>com.microsoft.azure.management.trafficmanager.samples.ManageTrafficManager.java</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
